--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!--Roboto link-->
-    <title>React App</title>
+    <title>Codi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
